Tweak JVM options